--- a/templates/bootstrap/_entry.twig
+++ b/templates/bootstrap/_entry.twig
@@ -6,11 +6,11 @@
         <div class="container">
             <div class="row col-lg-12 pt-10 pb-5 txtclrblk">
                 <h1>{{ entry.title }}</h1>
-                <h2>{{ entry.emailIntroduction }}</h2><br>
+                <h2>{{ entry.bootstrapIntroduction }}</h2><br>
                 Posted by <a href="#">{{ entry.author }}</a>
                 on {{ entry.postDate | date('M d, Y') }}
                 <div class="col-lg-8 col-md-10 mx-auto">
-                    {{ entry.emailBody }}
+                    {{ entry.bootstrapUrl }}
                 </div>
             </div>
         </div>
