--- a/web/assets/css/unify-globals.css
+++ b/web/assets/css/unify-globals.css
@@ -4975,7 +4975,7 @@
 ------------------------------------*/
 /* Color Green */
 .g-color-green {
-  color: #cf3b47 !important; }
+  color: #72c02c !important; }
 
 /* Color Blue */
 .g-color-blue {
