--- a/templates/index.twig
+++ b/templates/index.twig
@@ -1,1 +1,182 @@
-homepage
+{% extends '_layout' %}
+{% block main %}
+    <!-- Cube Portfolio Blocks -->
+    <div class="container g-pt-20">
+        <div class="row justify-content-center text-center g-mb-100">
+            <div class="col-lg-8">
+                <h2 class="h1 g-color-black g-font-weight-600 mb-0">A creative individual focusing on <span class="d-inline-block g-brd-bottom g-brd-2 g-color-green">music</span>,
+                    <span class="d-inline-block g-brd-bottom g-brd-2 g-color-green">development</span> &amp; tiny home <span class="d-inline-block g-brd-bottom g-brd-2 g-color-green">building</span>.
+                </h2>
+            </div>
+        </div>
+
+        <!-- Cube Portfolio Blocks - Filter -->
+        <ul id="filterControls" class="d-block list-inline text-center g-mb-50">
+            <li class="list-inline-item cbp-filter-item g-color-green --active g-font-weight-600 g-font-size-13 text-uppercase pr-2 mb-2" role="button" data-filter="*" >Show All
+            </li>
+            <li class="list-inline-item cbp-filter-item g-color-black g-color-primary--hover g-color-gray-dark-v5--active g-font-weight-600 g-font-size-13 text-uppercase px-2 mb-2" role="button" data-filter=".identity">Emails
+            </li>
+            <li class="list-inline-item cbp-filter-item g-color-black g-color-primary--hover g-color-gray-dark-v5--active g-font-weight-600 g-font-size-13 text-uppercase px-2 mb-2" role="button" data-filter=".design">Bootstrap
+            </li>
+          </ul>
+          <!-- End Cube Portfolio Blocks - Filter -->
+    </div>
+    <!-- End Cube Portfolio Blocks -->
+
+    <!-- Cube Portfolio Blocks - Content -->
+    <div align="center" class="container">
+        <div class="cbp" style="margin-bottom: 50px;" data-controls="#filterControls" data-animation="quicksand" data-x-gap="5" data-y-gap="5" data-media-queries='[
+               {"width": 1500, "cols": 4},
+               {"width": 1100, "cols": 4},
+               {"width": 800, "cols": 3},
+               {"width": 480, "cols": 2},
+               {"width": 300, "cols": 1}
+             ]'>
+            <!-- Cube Portfolio Blocks - Item -->
+            <div class="cbp-item identity identity">
+                <div class="u-block-hover g-parent">
+                    <img class="img-fluid g-transform-scale-1_1--parent-hover g-transition-0_5 g-transition--ease-in-out" src="../../assets/img/klx-sm.jpg" alt="Image description">
+                    <div class="d-flex w-100 h-100 u-block-hover__additional--fade u-block-hover__additional--fade-in g-bg-bluegray-opacity-0_5 opacity-0 g-opacity-1--parent-hover g-pos-abs g-top-0 g-left-0 g-transition-0_3 g-transition--ease-in g-pa-20">
+                        <div class="d-flex align-items-start flex-column mb-auto">
+                            <h3 class="h5 g-color-white g-font-weight-600 mb-1">KLX</h3>
+                            <span class="d-block g-color-white-opacity-0_8">Email Creation</span>
+                        </div>
+                        <ul class="align-items-end flex-column list-inline mt-auto ml-auto mb-0">
+                            <li class="list-inline-item">
+                                <a class="u-icon-v2 u-icon-size--xs g-brd-white g-color-black g-bg-white rounded-circle" href="http://craft.ulcomm.com/emails/klx/email-1.html">
+                                    <i class="icon-communication-095 u-line-icon-pro"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="cbp-lightbox u-icon-v2 u-icon-size--xs g-brd-white g-color-black g-bg-white rounded-circle" href="../../assets/img/klx.jpg">
+                                    <i class="icon-communication-017 u-line-icon-pro"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- End Cube Portfolio Blocks - Item -->
+
+            <!-- Cube Portfolio Blocks - Item -->
+            <div class="cbp-item identity identity">
+                <div class="u-block-hover g-parent">
+                    <img class="img-fluid g-transform-scale-1_1--parent-hover g-transition-0_5 g-transition--ease-in-out" src="../../assets/img/magnum-sm.jpg" alt="Image description">
+                    <div class="d-flex w-100 h-100 u-block-hover__additional--fade u-block-hover__additional--fade-in g-bg-bluegray-opacity-0_5 opacity-0 g-opacity-1--parent-hover g-pos-abs g-top-0 g-left-0 g-transition-0_3 g-transition--ease-in g-pa-20">
+                        <div class="d-flex align-items-start flex-column mb-auto">
+                            <h3 class="h5 g-color-white g-font-weight-600 mb-1">Magnum</h3>
+                            <span class="d-block g-color-white-opacity-0_8">Email Creation</span>
+                        </div>
+                        <ul class="align-items-end flex-column list-inline mt-auto ml-auto mb-0">
+                            <li class="list-inline-item">
+                                <a class="u-icon-v2 u-icon-size--xs g-brd-white g-color-black g-bg-white rounded-circle" href="http://craft.ulcomm.com/emails/magnum/no-limit.html">
+                                    <i class="icon-communication-095 u-line-icon-pro"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="cbp-lightbox u-icon-v2 u-icon-size--xs g-brd-white g-color-black g-bg-white rounded-circle" href="../../assets/img/magnum.jpg">
+                                    <i class="icon-communication-017 u-line-icon-pro"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- End Cube Portfolio Blocks - Item -->
+
+            <!-- Cube Portfolio Blocks - Item -->
+            <div class="cbp-item design">
+                <div class="u-block-hover g-parent">
+                    <img class="img-fluid g-transform-scale-1_1--parent-hover g-transition-0_5 g-transition--ease-in-out" src="../../assets/img/centerpoint-sm.jpg" alt="Image description">
+                    <div class="d-flex w-100 h-100 u-block-hover__additional--fade u-block-hover__additional--fade-in g-bg-bluegray-opacity-0_5 opacity-0 g-opacity-1--parent-hover g-pos-abs g-top-0 g-left-0 g-transition-0_3 g-transition--ease-in g-pa-20">
+                        <div class="d-flex align-items-start flex-column mb-auto">
+                            <h3 class="h5 g-color-white g-font-weight-600 mb-1">CenterPoint Energy</h3>
+                            <span class="d-block g-color-white-opacity-0_8">Bootstrap Landing Page</span>
+                        </div>
+                        <ul class="align-items-end flex-column list-inline mt-auto ml-auto mb-0">
+                            <li class="list-inline-item">
+                                <a class="u-icon-v2 u-icon-size--xs g-brd-white g-color-black g-bg-white rounded-circle" href="http://dev.centerpointenergyretail.com/moving">
+                                    <i class="icon-communication-095 u-line-icon-pro"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="cbp-lightbox u-icon-v2 u-icon-size--xs g-brd-white g-color-black g-bg-white rounded-circle" href="../../assets/img/centerpoint.jpg">
+                                    <i class="icon-communication-017 u-line-icon-pro"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- End Cube Portfolio Blocks - Item -->
+
+            <!-- Cube Portfolio Blocks - Item -->
+            <div class="cbp-item graphic design">
+                <div class="u-block-hover g-parent">
+                    <img class="img-fluid g-transform-scale-1_1--parent-hover g-transition-0_5 g-transition--ease-in-out" src="../../assets/img/energistics-sm.jpg" alt="Image description">
+                    <div class="d-flex w-100 h-100 u-block-hover__additional--fade u-block-hover__additional--fade-in g-bg-bluegray-opacity-0_5 opacity-0 g-opacity-1--parent-hover g-pos-abs g-top-0 g-left-0 g-transition-0_3 g-transition--ease-in g-pa-20">
+                        <div class="d-flex align-items-start flex-column mb-auto">
+                            <h3 class="h5 g-color-white g-font-weight-600 mb-1">Energistics</h3>
+                            <span class="d-block g-color-white-opacity-0_8">Bootstrap Creation</span>
+                        </div>
+                        <ul class="align-items-end flex-column list-inline mt-auto ml-auto mb-0">
+                            <li class="list-inline-item">
+                                <a class="u-icon-v2 u-icon-size--xs g-brd-white g-color-black g-bg-white rounded-circle" href="http://dev.energistics.ulcomm.com/">
+                                    <i class="icon-communication-095 u-line-icon-pro"></i>
+                                </a>
+                            </li>
+                            <li class="list-inline-item">
+                                <a class="cbp-lightbox u-icon-v2 u-icon-size--xs g-brd-white g-color-black g-bg-white rounded-circle" href="../../assets/img/energistics.jpg">
+                                    <i class="icon-communication-017 u-line-icon-pro"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+            <!-- End Cube Portfolio Blocks - Item -->
+
+
+    <!-- Call to Action -->
+    <section style="background-color: #72c02c">
+        <div class="container g-pos-rel g-z-index-1 g-pt-50 g-pb-30">
+            <div class="row justify-content-between align-items-center">
+                <div class="col-lg-8 g-mb-20">
+                    <h2 class="h3 g-color-white text-uppercase">Want to listen?</h2>
+                    <h2 class="g-color-white g-font-weight-700 text-uppercase mb-0">The best playlist for your listening pleasure.</h2>
+                </div>
+
+                <div class="col-lg-4 text-right g-mb-20">
+                    <a class="btn u-btn-outline-white g-brd-2 g-font-weight-700 g-font-size-13 g-rounded-50 text-uppercase g-py-15 g-px-30" href="https://www.mixcloud.com/comp1/" target="_blank">Listen Now</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Call to Action -->
+
+    <!-- Mock-Up -->
+    <div class="text-center g-pos-rel g-overflow-hidden g-pb-100" style="background-image: url(../../assets/img-temp/1920x1080/img14.jpg);">
+        <div class="g-pos-rel g-z-index-1 g-mb-100--lg">
+            <h2 class="h2 g-color-white g-font-weight-600 g-font-size-40--md text-uppercase mb-5 g-pt-100">Joey
+                <span class="g-color-green">Hernandez</h2>
+            <a class="btn u-btn-outline-primary g-brd-2 g-font-weight-700 g-font-size-13 g-rounded-50 text-uppercase g-py-15 g-px-30" href="mailto:jhernandez@ulcomm.com">Start a project</a>
+        </div>
+
+        <div class="g-pos-abs g-bottom-0 g-left-0" data-animation="fadeInUp" data-animation-delay="100" data-animation-duration="800">
+            <img class="img-fluid" src="../../assets/img-temp/1920x800/img24.png" alt="Image Description">
+        </div>
+        <div class="g-pos-abs g-bottom-0 g-right-0" data-animation="fadeInUp" data-animation-delay="300" data-animation-duration="1000">
+            <img class="img-fluid" src="../../assets/img-temp/1920x800/img25.png" alt="Image Description">
+        </div>
+        <div class="g-pos-abs g-bottom-0 g-left-0" data-animation="fadeInUp" data-animation-delay="600" data-animation-duration="1200">
+            <img class="img-fluid" src="../../assets/img-temp/1920x800/img26.png" alt="Image Description">
+        </div>
+        <div class="g-pos-abs g-bottom-0 g-left-0" data-animation="fadeInUp" data-animation-delay="600" data-animation-duration="1400">
+            <img class="img-fluid" src="../../assets/img-temp/1920x800/img27.png" alt="Image Description">
+        </div>
+    </div>
+    <!-- End Mock-Up -->
+
+{% endblock main %}
