--- a/web/assets/css/unify-components.css
+++ b/web/assets/css/unify-components.css
@@ -3859,7 +3859,7 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
 /* Button Google Plus */
 .u-btn-google-plus {
   color: #fff;
-  background-color: #dd4b39; }
+  background-color: #72c02c; }
 
 .u-btn-google-plus:hover, .u-btn-google-plus.active {
   border-color: #e47365;
@@ -3869,22 +3869,22 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
   color: #fff; }
 
 .u-btn-google-plus.g-btn-hover-reset:hover, .u-btn-google-plus.g-btn-hover-reset.active {
-  background-color: #dd4b39;
-  border-color: #dd4b39; }
+  background-color: #72c02c;
+  border-color: #72c02c; }
 
 /* Outline Button Primary */
 .u-btn-outline-primary {
-  color: #cf3b47;
-  border-color: #cf3b47;
+  color: #72c02c;
+  border-color: #72c02c;
   background-color: transparent; }
 
 .u-btn-outline-primary:focus, .u-btn-outline-primary.active {
   color: #fff;
-  background-color: #cf3b47; }
+  background-color: #72c02c; }
 
 .u-btn-outline-primary:hover {
   color: #fff;
-  background-color: #cf3b47; }
+  background-color: #72c02c; }
 
 .u-btn-outline-primary.u-btn-hover-v1-1 {
   overflow: hidden; }
@@ -4254,23 +4254,23 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
 
 /* Button Outline Red */
 .u-btn-outline-red {
-  color: #f00;
-  border-color: #f00;
+  color: #72c02c;
+  border-color: #72c02c;
   background-color: transparent; }
 
 .u-btn-outline-red:focus, .u-btn-outline-red.active {
   color: #fff;
-  background-color: #f00; }
+  background-color: #72c02c; }
 
 .u-btn-outline-red:hover {
   color: #fff;
-  background-color: #f00; }
+  background-color: #72c02c; }
 
 .u-btn-outline-red.u-btn-hover-v1-1 {
   overflow: hidden; }
 
 .u-btn-outline-red.u-btn-hover-v1-1::after, .u-btn-outline-red.u-btn-hover-v1-1:hover::after {
-  background-color: #ff1a1a; }
+  background-color: #72c02c; }
 
 .u-btn-outline-red.u-btn-hover-v1-1:hover {
   overflow: hidden;
@@ -4280,7 +4280,7 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
   overflow: hidden; }
 
 .u-btn-outline-red.u-btn-hover-v1-2::after, .u-btn-outline-red.u-btn-hover-v1-2:hover::after {
-  background-color: #ff1a1a; }
+  background-color: #72c02c; }
 
 .u-btn-outline-red.u-btn-hover-v1-2:hover {
   overflow: hidden;
@@ -4290,7 +4290,7 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
   overflow: hidden; }
 
 .u-btn-outline-red.u-btn-hover-v1-3::after, .u-btn-outline-red.u-btn-hover-v1-3:hover::after {
-  background-color: #ff1a1a; }
+  background-color: #72c02c; }
 
 .u-btn-outline-red.u-btn-hover-v1-3:hover {
   overflow: hidden;
@@ -4300,7 +4300,7 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
   overflow: hidden; }
 
 .u-btn-outline-red.u-btn-hover-v1-4::after, .u-btn-outline-red.u-btn-hover-v1-4:hover::after {
-  background-color: #ff1a1a; }
+  background-color: #72c02c; }
 
 .u-btn-outline-red.u-btn-hover-v1-4:hover {
   overflow: hidden;
@@ -4310,7 +4310,7 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
   overflow: hidden; }
 
 .u-btn-outline-red.u-btn-hover-v2-1::after, .u-btn-outline-red.u-btn-hover-v2-1:hover::after {
-  background-color: #ff1a1a; }
+  background-color: #72c02c; }
 
 .u-btn-outline-red.u-btn-hover-v2-1:hover {
   overflow: hidden;
@@ -4320,7 +4320,7 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
   overflow: hidden; }
 
 .u-btn-outline-red.u-btn-hover-v2-2::after, .u-btn-outline-red.u-btn-hover-v2-2:hover::after {
-  background-color: #ff1a1a; }
+  background-color: #72c02c; }
 
 .u-btn-outline-red.u-btn-hover-v2-2:hover {
   overflow: hidden;
@@ -4328,23 +4328,23 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
 
 /* Button Outline Red Tomato */
 .u-btn-outline-lightred {
-  color: #e64b3b;
-  border-color: #e64b3b;
+  color: #72c02c;
+  border-color: #72c02c;
   background-color: transparent; }
 
 .u-btn-outline-lightred:focus, .u-btn-outline-lightred.active {
   color: #fff;
-  background-color: #e64b3b; }
+  background-color: #72c02c; }
 
 .u-btn-outline-lightred:hover {
   color: #fff;
-  background-color: #e64b3b; }
+  background-color: #72c02c; }
 
 .u-btn-outline-lightred.u-btn-hover-v1-1 {
   overflow: hidden; }
 
 .u-btn-outline-lightred.u-btn-hover-v1-1::after, .u-btn-outline-lightred.u-btn-hover-v1-1:hover::after {
-  background-color: #e96052; }
+  background-color: #72c02c; }
 
 .u-btn-outline-lightred.u-btn-hover-v1-1:hover {
   overflow: hidden;
@@ -4354,7 +4354,7 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
   overflow: hidden; }
 
 .u-btn-outline-lightred.u-btn-hover-v1-2::after, .u-btn-outline-lightred.u-btn-hover-v1-2:hover::after {
-  background-color: #e96052; }
+  background-color: #72c02c; }
 
 .u-btn-outline-lightred.u-btn-hover-v1-2:hover {
   overflow: hidden;
@@ -4364,7 +4364,7 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
   overflow: hidden; }
 
 .u-btn-outline-lightred.u-btn-hover-v1-3::after, .u-btn-outline-lightred.u-btn-hover-v1-3:hover::after {
-  background-color: #e96052; }
+  background-color: #72c02c; }
 
 .u-btn-outline-lightred.u-btn-hover-v1-3:hover {
   overflow: hidden;
@@ -4374,7 +4374,7 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
   overflow: hidden; }
 
 .u-btn-outline-lightred.u-btn-hover-v1-4::after, .u-btn-outline-lightred.u-btn-hover-v1-4:hover::after {
-  background-color: #e96052; }
+  background-color: #72c02c; }
 
 .u-btn-outline-lightred.u-btn-hover-v1-4:hover {
   overflow: hidden;
@@ -4384,7 +4384,7 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
   overflow: hidden; }
 
 .u-btn-outline-lightred.u-btn-hover-v2-1::after, .u-btn-outline-lightred.u-btn-hover-v2-1:hover::after {
-  background-color: #e96052; }
+  background-color: #72c02c; }
 
 .u-btn-outline-lightred.u-btn-hover-v2-1:hover {
   overflow: hidden;
@@ -4394,7 +4394,7 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
   overflow: hidden; }
 
 .u-btn-outline-lightred.u-btn-hover-v2-2::after, .u-btn-outline-lightred.u-btn-hover-v2-2:hover::after {
-  background-color: #e96052; }
+  background-color: #72c02c; }
 
 .u-btn-outline-lightred.u-btn-hover-v2-2:hover {
   overflow: hidden;
@@ -4402,23 +4402,23 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
 
 /* Outline Button Dark Red */
 .u-btn-outline-darkred {
-  color: #a10f2b;
-  border-color: #a10f2b;
+  color: #3f7d23;
+  border-color: #3f7d23;
   background-color: transparent; }
 
 .u-btn-outline-darkred:focus, .u-btn-outline-darkred.active {
   color: #fff;
-  background-color: #a10f2b; }
+  background-color: #3f7d23; }
 
 .u-btn-outline-darkred:hover {
   color: #fff;
-  background-color: #a10f2b; }
+  background-color: #3f7d23; }
 
 .u-btn-outline-darkred.u-btn-hover-v1-1 {
   overflow: hidden; }
 
 .u-btn-outline-darkred.u-btn-hover-v1-1::after, .u-btn-outline-darkred.u-btn-hover-v1-1:hover::after {
-  background-color: #b81131; }
+  background-color: #3f7d23; }
 
 .u-btn-outline-darkred.u-btn-hover-v1-1:hover {
   overflow: hidden;
@@ -4428,7 +4428,7 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
   overflow: hidden; }
 
 .u-btn-outline-darkred.u-btn-hover-v1-2::after, .u-btn-outline-darkred.u-btn-hover-v1-2:hover::after {
-  background-color: #b81131; }
+  background-color: #3f7d23; }
 
 .u-btn-outline-darkred.u-btn-hover-v1-2:hover {
   overflow: hidden;
@@ -4438,7 +4438,7 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
   overflow: hidden; }
 
 .u-btn-outline-darkred.u-btn-hover-v1-3::after, .u-btn-outline-darkred.u-btn-hover-v1-3:hover::after {
-  background-color: #b81131; }
+  background-color: #3f7d23; }
 
 .u-btn-outline-darkred.u-btn-hover-v1-3:hover {
   overflow: hidden;
@@ -4448,7 +4448,7 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
   overflow: hidden; }
 
 .u-btn-outline-darkred.u-btn-hover-v1-4::after, .u-btn-outline-darkred.u-btn-hover-v1-4:hover::after {
-  background-color: #b81131; }
+  background-color: #3f7d23; }
 
 .u-btn-outline-darkred.u-btn-hover-v1-4:hover {
   overflow: hidden;
@@ -4458,7 +4458,7 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
   overflow: hidden; }
 
 .u-btn-outline-darkred.u-btn-hover-v2-1::after, .u-btn-outline-darkred.u-btn-hover-v2-1:hover::after {
-  background-color: #b81131; }
+  background-color: #3f7d23; }
 
 .u-btn-outline-darkred.u-btn-hover-v2-1:hover {
   overflow: hidden;
@@ -4468,7 +4468,7 @@ body[class*="u-body--header-side"].u-body--header-side-opened .u-header__overlay
   overflow: hidden; }
 
 .u-btn-outline-darkred.u-btn-hover-v2-2::after, .u-btn-outline-darkred.u-btn-hover-v2-2:hover::after {
-  background-color: #b81131; }
+  background-color: #3f7d23; }
 
 .u-btn-outline-darkred.u-btn-hover-v2-2:hover {
   overflow: hidden;
